tests/ui/resolve/suggestions/suggest-path-for-tuple-struct.stderr
error[E0423]: cannot find value `SomeTupleStruct` in this scope
  --> $DIR/suggest-path-for-tuple-struct.rs:22:13
   |
LL |     let _ = SomeTupleStruct.new();
   |             ^^^^^^^^^^^^^^^
   |
   = note: a struct named `SomeTupleStruct` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     let _ = SomeTupleStruct.new();
LL +     let _ = SomeTupleStruct::new();
   |

error[E0423]: cannot find value `SomeRegularStruct` in this scope
  --> $DIR/suggest-path-for-tuple-struct.rs:24:13
   |
LL |     let _ = SomeRegularStruct.new();
   |             ^^^^^^^^^^^^^^^^^
   |
   = note: a struct named `SomeRegularStruct` exists in another namespace
help: use the path separator to refer to an item
   |
LL -     let _ = SomeRegularStruct.new();
LL +     let _ = SomeRegularStruct::new();
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
